SVG with masking is not rendering image with mask effect

XMLWordPrintable

    • web
    • generic
    • generic

      SVG images with mask setting is not effectively rendered. Attached a sample svg content (svgMask.html) and rendered screen shot (svg_masking.png). Also attached the screenshot of the effected websites.

      Regression: No, fails on all previous versions.

        1. svg_masking.png
          svg_masking.png
          28 kB
        2. svgMask.html
          0.6 kB
        3. wordpress-launcher.png
          wordpress-launcher.png
          185 kB
        4. att-launcher.png
          att-launcher.png
          61 kB
        5. HelloWebView.java
          7 kB
        6. imdb-bro.jpg
          imdb-bro.jpg
          65 kB
        7. imdb-lau.jpg
          imdb-lau.jpg
          49 kB
        8. indeed-bro.jpg
          indeed-bro.jpg
          70 kB
        9. indeed-lau.jpg
          indeed-lau.jpg
          59 kB
        10. welfgo.html
          14 kB
        11. svgMask_Stroke.html
          0.6 kB
        12. svgMask_RoundedRect.html
          0.6 kB
        13. svgMask_Path.html
          0.5 kB

            Assignee:
            Unassigned
            Reporter:
            Chandrashekar Krishnan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated: