8218973: SVG with masking is not rendering image with mask effect